plataforma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-app
spec:
  ingressClassName: nginx
  rules:
  - host: frontend-cloud.dnn.lat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-app
            port:
              number: 80
